# jcia

./: .env.example  .gitignore  .jcia.yaml.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHECKLIST_WSL_TO_POWERSHELL.md  CLAUDE.md  CONTRIBUTING.md  ENV_MIGRATION_WSL_TO_POWERSHELL.md  FINAL_SUMMARY.md  IDE_SETUP_POWERSHELL.md  Makefile  PROJECT_CONSTITUTION.md  PROJECT_STATUS.md  README.md  bandit_report.json  code-review-checklist.md  coverage.json  demo_impact_analysis_local.py  fix_openai.py  jcia.yaml  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_jenkins_analysis.py  run_jenkins_analysis_detailed.py  run_jenkins_analysis_full.py  run_jenkins_validation.py  run_validation_simple.py  security_fix_report.md  setup.py  test_remote_call_entities.py
.claude/: settings.local.json
.codebuddy/: DISCIPLINE_CHECKLIST.md  QUICK_COMMANDS.md  SHORTCUTS_GUIDE.md
.codebuddy/rules/: jcia_clean_architecture.mdc  jcia_development_standards.mdc  jcia_project_plan.mdc  jcia_testing_coverage.mdc
.dev-workflow/: config.yml
.speckit/: analyze.md  constitution.md  plan.md  specify.md  tasks.md
docs/: IMPLEMENTATION_COMPLETE.md  OPEN_SOURCE_TODO.md  adapters_implementation_guide.md  adapters_implementation_summary.md  codeql_deepcode_research_report.md  final_completion_report_20260224.md  final_work_summary_20260215.md  implementation_plan_core_adapters.md  jcia_optimization_roadmap.md  plan.json  project_constitution.md  test_and_check_status.md  verification_report_20260215.md
docs/reports/: COVERAGE_IMPROVEMENT_REPORT.md  JCIA_Commercial_Assessment_Report.md  JCIA_Functional_Evaluation_Report.md  STATIC_CHECK_REPORT.md  agent_team_summary_20260215.md  bandit_report.json  code_review_report.md  coverage_new.json  coverage_report.json  daily_work_report_20260214.md  jcia_team_work_report.md
jcia/: __init__.py
jcia/adapters/: AGENTS.md  __init__.py
jcia/adapters/ai/: __init__.py  llm_adapter.py  openai_adapter.py  openai_adapter.py.bak  skywalking_adapter.py  volcengine_adapter.py
jcia/adapters/database/: __init__.py  sqlite_adapter.py
jcia/adapters/git/: __init__.py  pydriller_adapter.py
jcia/adapters/maven/: __init__.py  maven_adapter.py
jcia/adapters/test_runners/: __init__.py  maven_surefire_test_executor.py
jcia/adapters/tools/: AGENTS.md  __init__.py  codeql_adapter.py  codeql_models.py  java_all_call_graph_adapter.py  mock_call_chain_analyzer.py  reflection_models.py  reflection_patterns.py  remote_call_patterns.py  skywalking_call_chain_adapter.py  source_code_call_graph_adapter.py  starts_test_selector_adapter.py
jcia/cli/: main.py
jcia/core/: AGENTS.md  __init__.py
jcia/core/entities/: __init__.py  change_set.py  impact_graph.py  remote_call.py  test_case.py  test_run.py
jcia/core/interfaces/: __init__.py  ai_service.py  analyzer.py  call_chain_analyzer.py  file_system.py  remote_call_analyzer.py  repository.py  test_runner.py  tool_wrapper.py
jcia/core/services/: AGENTS.md  __init__.py  analysis_fusion_service.py  call_chain_builder.py  change_comparison_service.py  impact_analysis_service.py  remote_call_detection_service.py  severity_calculator.py  severity_enhancer.py  test_generator_service.py  test_selection_service.py
jcia/core/use_cases/: __init__.py  analyze_impact.py  generate_report.py  generate_tests.py  run_regression.py
jcia/infrastructure/config/: __init__.py  config_manager.py
jcia/infrastructure/database/: sqlite_adapter.py  sqlite_repository.py
jcia/infrastructure/fs/: __init__.py  file_system.py
jcia/infrastructure/logging/: __init__.py  logger.py
jcia/reports/: __init__.py  base.py  html_reporter.py  json_reporter.py  markdown_reporter.py
promotion/: demo_script.md  email_template.md  faq.md  poster_content.md  quickstart.md  summary.md
report/: coverage.json  detailed_report_20260208_193954.html  detailed_report_20260208_212615.html  impact_analysis_acc742d9_20260213_202358.md  impact_analysis_acc742d9_20260216_092820.md  project_status_report.md  test_report_20260208_130939.html  test_report_20260208_151931.html  test_report_20260208_152132.html  test_report_20260208_152401.html
reports/: jenkins_impact_analysis_demo.md
research/: plan_revised_v1.1.md  test_selection_tools_research.md
review/: phase5_final_fixes_report.md  phase5_fixes_report.md  phase5_test_data_analysis.md  phase5_walkthrough.md  semantic-test-review.md  semantic_code_review_report.md  semantic_code_review_summary.md  semantic_code_review_v2.md  semantic_walkthrough_report.md  walkthrough_report.md
scripts/: check_tdd_compliance.ps1  check_tdd_compliance.py  create_test_repo.py  demo_jcia_simple.py  demo_jcia_workflow.py  dev_workflow.ps1  enforce_discipline.ps1  fix_openai.py  fix_pytest.ps1  init_aliases.ps1  init_test_repo.py  run_ai_tests.py  run_jenkins_analysis.py  run_jenkins_analysis_full.py  run_pytest.ps1  run_tests_debug.ps1  setup_env.ps1  task_completion_check.ps1
scripts/analysis/: analyze_cov.py  analyze_coverage.py  demo_impact_analysis.py  demo_impact_analysis_local.py  demo_jenkins_commits.py  generate_jenkins_demo.py
scripts/setup/: IDE_SETUP_POWERSHELL.md  install_dev_workflow_auto.ps1
scripts/utils/: check_coverage.py
test_output/: bandit_full.txt  bandit_results.txt  maven_debug.txt  pytest_debug.txt  pytest_results.txt  repair_test_results.txt  ruff_errors.txt
tests/: conftest.py  conftest_base.py
tests/integration/: test_reflection_analysis_integration.py
tests/performance/: benchmark_impact_analysis.py  performance_profiler.py  performance_report_generator.py  simple_benchmark.py
tests/performance/reports/: benchmark_data.json  benchmark_report_20260222_150631.json  benchmark_report_20260222_150631.txt  benchmark_report_20260222_154633.json  benchmark_report_20260222_154633.txt  performance_analysis_report.md
tests/unit/adapters/: __init__.py
tests/unit/cli/: test_main.py
tests/unit/core/: __init__.py  test_change_set.py  test_impact_graph.py  test_remote_call.py  test_test_case.py  test_test_run.py
tests/unit/reports/: __init__.py  test_base.py  (+3 more)
(+49 files in other folders)
