[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jcia"
version = "0.1.0"
description = "Java Code Impact Analyzer - 代码变更影响分析工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JCIA Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
    dependencies = [
        "click>=8.0.0",
        "pydriller>=2.6.0",
        "pyyaml>=6.0.1",
        "jinja2>=3.1.2",
        "requests>=2.31.0",
        "beautifulsoup4>=4.12.0",
        "rich>=13.7.0",
        "pydantic>=2.5.0",
        "pathlib>=2.3.6",
    ]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.340",
    "bandit[toml]>=1.7.6",
    "pre-commit>=3.6.0",
    "mypy>=1.7.0",
]

[project.scripts]
jcia = "jcia.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/jcia"
Documentation = "https://github.com/your-org/jcia#readme"
Repository = "https://github.com/your-org/jcia"
Issues = "https://github.com/your-org/jcia/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jcia*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101",  # assert statements (used in tests)
    "S603",  # subprocess calls (intentional)
    "S607",  # subprocess calls (intentional)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["jcia", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "**/build",
    "**/dist",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false




[tool.coverage.run]
source = ["jcia"]
omit = [
    "*/tests/*",
    "*/test_*",
    "jcia/__main__.py",
    "jcia/core/interfaces/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B603", "B607", "B404"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
