[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jcia"
version = "0.1.0"
description = "Java Code Impact Analyzer - 代码变更影响分析工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JCIA Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pydriller>=2.6.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.340",
    "bandit[toml]>=1.7.6",
    "pre-commit>=3.6.0",
    "mypy>=1.7.0",
]
ai = [
    "openai>=1.0.0",
]

[project.scripts]
jcia = "jcia.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/jcia"
Documentation = "https://github.com/your-org/jcia#readme"
Repository = "https://github.com/your-org/jcia"
Issues = "https://github.com/your-org/jcia/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jcia*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "C4",   # flake8-comprehensions
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    "G",    # flake8-logging-format
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "PERF", # perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff-specific rules
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TD",   # flake8-todos
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]
ignore = [
    "S101",   # assert statements (used in tests)
    "S603",   # subprocess calls (intentional)
    "S607",   # subprocess calls (intentional)
    "COM812", # missing trailing comma (conflicts with formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
    "ARG001", # unused function arguments (common in overrides)
    "ARG002", # unused method arguments (common in overrides)
    "PLR0913",# too many arguments (common in complex classes)
    "PLR2004",# magic value comparison (too strict)
    "TRY003", # long messages outside exception class
    "EM101",  # raw string in exception
    "EM102",  # f-string in exception
    "FIX002", # todo comments (we want these)
    "TD003",  # missing issue link in todo
    "FBT001", # boolean positional arg (common pattern)
    "FBT002", # boolean default arg (common pattern)
    "PLW2901",# redefined loop variable (common pattern)
    "RUF012", # mutable class variables (common with dataclasses)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "E501",  # line too long (test data/paths)
    "E402",  # module import not at top (sys.path manipulation)
    "S108",  # hardcoded temp file (intentional in tests)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["jcia", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "**/build",
    "**/dist",
]
# Strict type checking settings
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportMissingParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportMissingReturnType = true
reportPrivateUsage = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnusedExpression = true
reportMatchNotExhaustive = true




[tool.coverage.run]
source = ["jcia"]
omit = [
    "*/tests/*",
    "*/test_*",
    "jcia/__main__.py",
    "jcia/core/interfaces/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", ".git", "build", "dist"]
# Enable all tests by default
skips = []
# Specific tests to skip with reasons:
# B101 - assert_used (common in tests and defensive programming)
# B603 - subprocess_without_shell_equals_true (intentional in this codebase)
# B607 - start_process_with_partial_path (intentional)
# B404 - import_subprocess (needed functionality)
# B405 - import_xml_etree (needed functionality)
# B310 - audit_url_open (needed functionality)
# B324 - hashlib_new_insecure_functions (using secure defaults)

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
